--- a/php/7.4-fpm-alpine/Dockerfile
+++ b/php/7.4-fpm-alpine/Dockerfile
@@ -74,4 +74,8 @@ RUN { \
 
 VOLUME /var/www/html
 
-CMD ["php-fpm && crond"]
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+
+CMD ["php-fpm"]
