--- a/php/7.4-fpm-alpine/Dockerfile
+++ b/php/7.4-fpm-alpine/Dockerfile
@@ -74,7 +74,10 @@ RUN { \
 
 VOLUME /var/www/html
 
-COPY docker-entrypoint.sh /usr/local/bin/
+RUN { \
+        echo 'crond'; \
+    } > /usr/local/bin/docker-entrypoint.sh
+
 
 ENTRYPOINT ["docker-entrypoint.sh"]
 
